Included env variables during build process

--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -107,6 +107,15 @@ jobs:
     # Build the site
     - name: Build website
       run: npm run build
+      env:
+          ZOTERO_API_KEY: ${{ secrets.ZOTERO_API_KEY }}
+          ZOTERO_CIROH_GROUP_ID: ${{ secrets.ZOTERO_CIROH_GROUP_ID }}
+          CAPTCHA_KEY: ${{ secrets.CAPTCHA_KEY }}
+          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+          S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY }}
+          S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
+          S3_REGION: ${{ secrets.S3_REGION }}
+          HS_CLIENT_ID: ${{ secrets.HS_CLIENT_ID }}
         
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4
